"Fix spacing"

--- a/Hairitage_Main.css
+++ b/Hairitage_Main.css
@@ -185,7 +185,6 @@
             
             .social {
                 display: flex;
-                justify-content: space-evenly;
             }
             
             .social a {
